fix: hover on mobile

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,6 +6,13 @@
     display: none;
 }
 
+@media (hover: none) {
+    .mobile:active {
+        background-color: hsl(var(--accent));
+        color: hsl(var(--accent-foreground));
+    }
+}
+
 /*.mobile:hover, .mobile:active {*/
 /*    background-color: hsl(var(--accent));*/
 /*    color: hsl(var(--accent-foreground));*/
